--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
   },
   "homepage": "https://github.com/bigunaleksej/ReactFluxTodo#readme",
   "dependencies": {
+    "classnames": "^2.1.3",
+    "events": "^1.0.2",
     "flux": "^2.1.1",
+    "object-assign": "^4.0.1",
     "react": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "5.6.18",
     "babel-loader": "5.3.1",
+    "css-loader": "^0.18.0",
     "html-webpack-plugin": "1.6.0",
+    "node-libs-browser": "^0.5.3",
+    "style-loader": "^0.12.4",
     "webpack": "1.10.1",
     "webpack-dev-server": "1.10.1"
   }
