--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "events": "^1.0.2",
     "flux": "^2.1.1",
     "object-assign": "^4.0.1",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-redux": "^2.1.2",
+    "redux": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "5.6.18",
