--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --progress --profile --colors",
     "watch": "webpack-dev-server --hot --inline --progress --colors",
-    "test": "echo \"No unit tests and e2e tests yet\" && exit 1"
+    "test": "mocha --compilers js:babel/register --recursive",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,14 @@
     "redux": "^3.0.0"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
     "babel-core": "5.6.18",
     "babel-loader": "5.3.1",
     "css-loader": "^0.18.0",
     "html-webpack-plugin": "1.6.0",
+    "jsdom": "^6.5.1",
+    "mocha": "^2.3.3",
+    "mocha-jsdom": "^1.0.0",
     "node-libs-browser": "^0.5.3",
     "style-loader": "^0.12.4",
     "webpack": "1.10.1",
